# schedlight

./: Cargo.toml  scraper.js
.github/workflows/: voe.yml
src/: main.rs
src/.github/workflows/: voe.yml
